# QualityPilot

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SECURITY.md  TASKS.md  cucumber.config.mjs  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  codeql.yml  compatibility.yml  zap.yml
app/: __init__.py
app/backend/: __init__.py  main.py
app/dashboard/: main.py
app/demo_app/: __init__.py  main.py  rate_limit.py  schemas.py
docker/: Dashboard.Dockerfile
docs/: INTERVIEW_DEMO.md  RELEASE_NOTES_v1.0.0.md  RESUME_BULLETS.md
examples/: ai_golden_dataset.json  event_schema.json
playwright/pages/: dashboard.page.ts  login.page.ts
playwright/tests/: accessibility.spec.ts  auth.spec.ts
qualitypilot/: __init__.py  config.py  database.py
qualitypilot/adapters/: base.py  selenium.py
qualitypilot/ai_quality/: deterministic.py  ollama.py
qualitypilot/analysis/: failure_analyzer.py
qualitypilot/defect_reporting/: reporter.py
qualitypilot/evidence/: collector.py
qualitypilot/execution/: runner.py
qualitypilot/exporters/: rally.py
qualitypilot/flaky_detection/: detector.py
qualitypilot/generators/: deterministic.py
reports/: playwright-junit.xml  sample-defect.json  sample-defect.md
requirements/: user_stories.md  user_stories.yaml
scripts/: capture_demo.mjs  check_duplicate_steps.py  evaluate_release.py
tests/: conftest.py
(+34 files in other folders)
