[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qualitypilot"
version = "1.0.0"
description = "Local-first intelligent enterprise TestOps platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QualityPilot Contributors" }]
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.6,<3",
  "email-validator>=2.2,<3",
  "sqlalchemy>=2.0,<3",
  "PyJWT>=2.9,<3",
  "httpx>=0.27,<1",
  "python-multipart>=0.0.12,<1",
  "PyYAML>=6,<7",
  "prometheus-client>=0.21,<1",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.40,<2", "pandas>=2.2,<4"]
test = [
  "pytest>=9,<10",
  "pytest-cov>=6,<7",
  "behave>=1.2.6,<2",
  "jsonschema>=4.23,<5",
  "schemathesis>=4,<5",
]
dev = ["qualitypilot[test,dashboard]", "ruff>=0.8,<1", "mypy>=1.13,<2"]
load = ["locust>=2.32,<3"]
selenium = ["pytest>=9,<10", "selenium>=4.27,<5"]

[tool.hatch.build.targets.wheel]
packages = ["qualitypilot", "app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "api: API integration tests",
  "identity: authentication and authorization tests",
  "security: security regression tests",
  "selenium: optional Selenium compatibility tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
